<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_dark">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        android:paddingBottom="5dp"
        android:text="@string/ENtitleText"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsOpen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/settings_icon"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@id/titleText"
        app:layout_constraintEnd_toEndOf="@id/amount1Panel"
        app:layout_constraintBottom_toBottomOf="@id/titleText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amount1Panel"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <TextView
            android:id="@+id/amount1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENamount1Text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/amount1Unit"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@font/lato_bold"
            android:hint="0.00"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textColor="#DADADA"
            android:textColorHint="#BFBFBF"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/amount1Text"
            app:layout_constraintTop_toBottomOf="@id/amount1Text" />

        <Spinner
            android:id="@+id/spinner1"
            style="@style/CustomSpinnerStyle"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/text_bg"
            android:paddingStart="7dp"
            android:paddingTop="7dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/amount1Panel"
            app:layout_constraintTop_toTopOf="@id/amount1Unit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/convertPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount1Panel">

        <ImageButton
            android:id="@+id/convertButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/convert_button"
            android:src="@drawable/exchange_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amount2Panel"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertPanel">

        <TextView
            android:id="@+id/amount2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENamount2Text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount2Unit"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@font/lato_bold"
            android:padding="8dp"
            android:text="0.00"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/amount2Text"
            app:layout_constraintTop_toBottomOf="@id/amount2Text" />

        <Spinner
            android:id="@+id/spinner2"
            style="@style/CustomSpinnerStyle"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/text_bg"
            android:paddingStart="7dp"
            android:paddingTop="7dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/amount2Panel"
            app:layout_constraintTop_toTopOf="@id/amount2Unit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ratePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_panel"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount2Panel">

        <TextView
            android:id="@+id/ierText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENierText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toTopOf="@id/ratePanel" />

        <TextView
            android:id="@+id/ierUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="1 USD = 41,47 UAH"
            android:textColor="#DADADA"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toBottomOf="@id/ierText" />

        <TextView
            android:id="@+id/lutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENlutText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toBottomOf="@id/ierUnit" />

        <TextView
            android:id="@+id/lutUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="Thu, 07 Nov 2024 00:00:02"
            android:textColor="#DADADA"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toBottomOf="@id/lutText" />

        <TextView
            android:id="@+id/nutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENnutText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toBottomOf="@id/lutUnit" />

        <TextView
            android:id="@+id/nutUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="Thu, 08 Nov 2024 00:00:02"
            android:textColor="#DADADA"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/ratePanel"
            app:layout_constraintTop_toBottomOf="@id/nutText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/langPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_panel"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratePanel">

        <TextView
            android:id="@+id/switchLangText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ENswitchLangText"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/langPanel"
            app:layout_constraintTop_toTopOf="@id/langPanel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/langPanel"
            app:layout_constraintTop_toBottomOf="@id/switchLangText">

            <ImageButton
                android:id="@+id/uaSelect"
                android:layout_width="27dp"
                android:layout_height="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ua_flag" />

            <ImageButton
                android:id="@+id/ruSelect"
                android:layout_width="27dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ru_flag" />

            <ImageButton
                android:id="@+id/enSelect"
                android:layout_width="27dp"
                android:layout_height="19dp"
                android:layout_marginStart="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/usa_flag" />

            <ImageButton
                android:id="@+id/plSelect"
                android:layout_width="27dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pl_flag" />

            <ImageButton
                android:id="@+id/nlSelect"
                android:layout_width="27dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nl_flag" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
